--- a/src/app/products/create-products/create-products.component.html
+++ b/src/app/products/create-products/create-products.component.html
@@ -1,1 +1,52 @@
-<p>create-products works!</p>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-header card-header-danger">
+                <h4 class="card-title">Agrega Nuevo Producto</h4>
+            </div>
+            <div class="card-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 offset-lg-3">
+
+                            <div class="row">
+                                <div class="col">
+                                    <label for="exampleFormControlInput1" class="form-label">Nombre del Producto</label>
+                                    <input type="text" class="form-control form-control-lg" placeholder="Nombre">
+                                </div>
+                                <div class="col">
+                                    <label for="exampleFormControlInput1" class="form-label">Precio del Producto</label>
+                                    <input type="number" class="form-control form-control-lg" placeholder="Precio">
+                                </div>
+                            </div>
+
+                            <div class="row mt-2">
+                                <div class="col">
+                                    <label for="exampleFormControlInput1" class="form-label">Talla del Producto</label>
+                                    <input type="text" class="form-control form-control-lg" placeholder="Talla">
+                                </div>
+                                <div class="col">
+                                    <label for="exampleFormControlInput1" class="form-label">Categoria</label>
+                                    <input type="text" class="form-control form-control-lg" placeholder="Categoria">
+                                </div>
+                            </div>
+
+                            <div class="row mt-2">
+                                <div class="col">
+                                    <label for="exampleFormControlInput1" class="form-label">Descripcion</label>
+                                    <textarea class="form-control form-control-lg" rows="3" placeholder="Descripcion"></textarea>
+                                </div>
+                            </div>
+                            <div class="mt-3" style="text-align: center;">
+                                <button class="btn btn-lg mr-3" style="padding: 1rem;background-color: #dbb22a;" routerLink="/product-list">Volver</button>
+                                <button class="btn btn-lg" style="padding: 1rem;background-color: #1dd56f;">Agregar</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
