--- a/src/app/products/create-products/create-products.component.html
+++ b/src/app/products/create-products/create-products.component.html
@@ -8,40 +8,40 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 offset-lg-3">
+                            <form action="" [formGroup]="createProducto" (ngSubmit)="agregarProducto()">
+                                <div class="row">
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Nombre del Producto</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Nombre" formControlName="nombre">
+                                    </div>
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Precio del Producto</label>
+                                        <input type="number" class="form-control form-control-lg" placeholder="Precio" formControlName="precio">
+                                    </div>
+                                </div>
 
-                            <div class="row">
-                                <div class="col">
-                                    <label for="exampleFormControlInput1" class="form-label">Nombre del Producto</label>
-                                    <input type="text" class="form-control form-control-lg" placeholder="Nombre">
+                                <div class="row mt-2">
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Talla del Producto</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Talla" formControlName="talla">
+                                    </div>
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Categoria</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Categoria" formControlName="categoria">
+                                    </div>
                                 </div>
-                                <div class="col">
-                                    <label for="exampleFormControlInput1" class="form-label">Precio del Producto</label>
-                                    <input type="number" class="form-control form-control-lg" placeholder="Precio">
-                                </div>
-                            </div>
 
-                            <div class="row mt-2">
-                                <div class="col">
-                                    <label for="exampleFormControlInput1" class="form-label">Talla del Producto</label>
-                                    <input type="text" class="form-control form-control-lg" placeholder="Talla">
+                                <div class="row mt-2">
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Descripcion</label>
+                                        <textarea class="form-control form-control-lg" rows="3" placeholder="Descripcion" formControlName="descripcion"></textarea>
+                                    </div>
                                 </div>
-                                <div class="col">
-                                    <label for="exampleFormControlInput1" class="form-label">Categoria</label>
-                                    <input type="text" class="form-control form-control-lg" placeholder="Categoria">
+                                <div class="mt-3" style="text-align: center;">
+                                    <button type="text" class="btn btn-lg mr-3" style="padding: 1rem;background-color: #dbb22a;" routerLink="/product-list">Volver</button>
+                                    <button type="submit" class="btn btn-lg" style="padding: 1rem;background-color: #1dd56f;">Agregar</button>
                                 </div>
-                            </div>
-
-                            <div class="row mt-2">
-                                <div class="col">
-                                    <label for="exampleFormControlInput1" class="form-label">Descripcion</label>
-                                    <textarea class="form-control form-control-lg" rows="3" placeholder="Descripcion"></textarea>
-                                </div>
-                            </div>
-                            <div class="mt-3" style="text-align: center;">
-                                <button class="btn btn-lg mr-3" style="padding: 1rem;background-color: #dbb22a;" routerLink="/product-list">Volver</button>
-                                <button class="btn btn-lg" style="padding: 1rem;background-color: #1dd56f;">Agregar</button>
-                            </div>
-
+                            </form>
                         </div>
                     </div>
                 </div>
