--- a/src/app/products/list-products/list-products.component.html
+++ b/src/app/products/list-products/list-products.component.html
@@ -10,11 +10,9 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table">
+                                <h4 *ngIf="productos.length == 0">No hay datos para mostrar</h4>
+                                <table *ngIf="productos.length > 0" class="table">
                                     <thead class=" text-primary">
-                                        <th>
-                                            ID
-                                        </th>
                                         <th>
                                             Nombre
                                         </th>
@@ -35,52 +33,25 @@
                                         </th>
                                     </thead>
                                     <tbody>
-                                        <tr>
+                                        <tr *ngFor="let producto of productos">
                                             <td>
-                                                1
+                                                {{ producto.nombre }}
                                             </td>
                                             <td>
-                                                Dakota Rice
+                                                {{ producto.precio | currency }}
                                             </td>
                                             <td>
-                                                Niger
+                                                {{ producto.talla }}
                                             </td>
                                             <td>
-                                                Oud-Turnhout
+                                                {{ producto.categoria }}
                                             </td>
                                             <td>
-                                                Oud-Turnhout
-                                            </td>
-                                            <td>
-                                                Oud-Turnhout
+                                                {{ producto.descripcion }}
                                             </td>
                                             <td class="text-primary">
                                                 <img src="https://incontactostorageprod.blob.core.windows.net/subirm/16504985398181650498539818.png" style="width: 25px;margin-right: 1rem;" alt="">
-                                                <img src="https://incontactostorageprod.blob.core.windows.net/subirm/16504986570091650498657009.png" style="width: 25px;" alt="">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                2
-                                            </td>
-                                            <td>
-                                                Minerva Hooper
-                                            </td>
-                                            <td>
-                                                Curaçao
-                                            </td>
-                                            <td>
-                                                Sinaai-Waas
-                                            </td>
-                                            <td>
-                                                Oud-Turnhout
-                                            </td>
-                                            <td>
-                                                Oud-Turnhout
-                                            </td>
-                                            <td class="text-primary">
-                                                <img src="https://incontactostorageprod.blob.core.windows.net/subirm/16504985398181650498539818.png" style="width: 25px;margin-right: 1rem;" alt="">
-                                                <img src="https://incontactostorageprod.blob.core.windows.net/subirm/16504986570091650498657009.png" style="width: 25px;" alt="">
+                                                <img (click)="eliminarProducto(producto.id)" src="https://incontactostorageprod.blob.core.windows.net/subirm/16504986570091650498657009.png" style="width: 25px;" alt="">
                                             </td>
                                         </tr>
                                     </tbody>
