--- a/src/app/products/create-products/create-products.component.html
+++ b/src/app/products/create-products/create-products.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header card-header-danger">
-                <h4 class="card-title">Agrega Nuevo Producto
+                <h4 class="card-title">{{ titulo }}
                     <div *ngIf="loading" class="spinner-border text-light"  role="status">
                         <span class="visually-hidden"></span>
                     </div>
@@ -13,7 +13,7 @@
                     <div class="row">
                         <div class="col-lg-6 offset-lg-3">
 
-                            <form action="" [formGroup]="createProducto" (ngSubmit)="agregarProducto()">
+                            <form action="" [formGroup]="createProducto" (ngSubmit)="agregarEditarProducto()">
                                 <div class="row">
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Nombre del
@@ -55,7 +55,7 @@
                                         style="padding: 1rem;background-color: #dbb22a;"
                                         routerLink="/product-list">Volver</button>
                                     <button type="submit" class="btn btn-lg"
-                                        style="padding: 1rem;background-color: #1dd56f;">Agregar</button>
+                                        style="padding: 1rem;background-color: #1dd56f;">{{ tituloButton }}</button>
                                 </div>
                             </form>
                         </div>
