--- a/src/app/products/create-products/create-products.component.html
+++ b/src/app/products/create-products/create-products.component.html
@@ -3,7 +3,7 @@
         <div class="card">
             <div class="card-header card-header-danger">
                 <h4 class="card-title">{{ titulo }}
-                    <div *ngIf="loading" class="spinner-border text-light"  role="status">
+                    <div *ngIf="loading" class="spinner-border text-light" role="status">
                         <span class="visually-hidden"></span>
                     </div>
                 </h4>
@@ -18,14 +18,12 @@
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Nombre del
                                             Producto</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Nombre"
-                                            formControlName="nombre">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Nombre" formControlName="nombre">
                                     </div>
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Precio del
                                             Producto</label>
-                                        <input type="number" class="form-control form-control-lg" placeholder="Precio"
-                                            formControlName="precio">
+                                        <input type="number" class="form-control form-control-lg" placeholder="Precio" formControlName="precio">
                                     </div>
                                 </div>
 
@@ -33,29 +31,29 @@
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Talla del
                                             Producto</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Talla"
-                                            formControlName="talla">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Talla" formControlName="talla">
                                     </div>
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Categoria</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Categoria"
-                                            formControlName="categoria">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Categoria" formControlName="categoria">
                                     </div>
                                 </div>
-
+                                <div class="row mt-2">
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Subir Imagen</label>
+                                        <input type="file" accept=".png, .jpg" class="form-control" (change)="cargarImagen($event)" formControlName="subirImagen">
+                                        <img [src]="urlImages" width="250px" alt="" *ngIf="urlImages">
+                                    </div>
+                                </div>
                                 <div class="row mt-2">
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Descripcion</label>
-                                        <textarea class="form-control form-control-lg" rows="3"
-                                            placeholder="Descripcion" formControlName="descripcion"></textarea>
+                                        <textarea class="form-control form-control-lg" rows="3" placeholder="Descripcion" formControlName="descripcion"></textarea>
                                     </div>
                                 </div>
                                 <div class="mt-3" style="text-align: center;">
-                                    <button type="text" class="btn btn-lg mr-3"
-                                        style="padding: 1rem;background-color: #dbb22a;"
-                                        routerLink="/product-list">Volver</button>
-                                    <button type="submit" class="btn btn-lg"
-                                        style="padding: 1rem;background-color: #1dd56f;">{{ tituloButton }}</button>
+                                    <button type="text" class="btn btn-lg mr-3" style="padding: 1rem;background-color: #dbb22a;" routerLink="/product-list">Volver</button>
+                                    <button type="submit" class="btn btn-lg" style="padding: 1rem;background-color: #1dd56f;">{{ tituloButton }}</button>
                                 </div>
                             </form>
                         </div>
