--- a/src/app/products/list-products/list-products.component.html
+++ b/src/app/products/list-products/list-products.component.html
@@ -6,7 +6,8 @@
             </div>
             <div class="card-body">
                 <div class="col-md-12">
-                    <button class="btn btn-dark btn-lg float-right" style="padding: 1rem;" routerLink="/create-product">Agregar</button>
+                    <button class="btn btn-dark btn-lg float-right" style="padding: 1rem;"
+                        routerLink="/create-product">Agregar</button>
                     <div class="card">
                         <div class="card-body">
                             <div class="table-responsive">
@@ -23,10 +24,10 @@
                                             Talla
                                         </th>
                                         <th>
-                                            Descripción
+                                            Categoria
                                         </th>
                                         <th>
-                                            Categoria
+                                            Descripción
                                         </th>
                                         <th>
                                             Opciones
@@ -50,8 +51,12 @@
                                                 {{ producto.descripcion }}
                                             </td>
                                             <td class="text-primary">
-                                                <img [routerLink]="['/editProducto/', producto.id]" src="https://incontactostorageprod.blob.core.windows.net/subirm/16504985398181650498539818.png" style="width: 25px;margin-right: 1rem;" alt="">
-                                                <img (click)="eliminarProducto(producto.id)" src="https://incontactostorageprod.blob.core.windows.net/subirm/16504986570091650498657009.png" style="width: 25px;" alt="">
+                                                <img [routerLink]="['/editProducto/', producto.id]"
+                                                    src="https://incontactostorageprod.blob.core.windows.net/subirm/16504985398181650498539818.png"
+                                                    style="width: 25px;margin-right: 1rem;" alt="">
+                                                <img (click)="eliminarProducto(producto.id)"
+                                                    src="https://incontactostorageprod.blob.core.windows.net/subirm/16504986570091650498657009.png"
+                                                    style="width: 25px;" alt="">
                                             </td>
                                         </tr>
                                     </tbody>
