--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text">
+    <a routerLink="/dashboard" class="simple-text">
         <div class="logo-img">
-            <img src="/assets/img/angular2-logo-red.png" />
+            <img src="/assets/img/medellin-store.png" />
         </div>
-        Creative Tim
+        Medellin Store
     </a>
 </div>
 <div class="sidebar-wrapper">
