Actualizando card Category

--- a/src/app/category/list-category/list-category.component.html
+++ b/src/app/category/list-category/list-category.component.html
@@ -4,13 +4,16 @@
             <div class="card-header card-header-danger">
                 <h4 class="card-title">Categorias</h4>
             </div>
-            <div class="card text-center" style="width: 18rem;">
+
+            <div class="card text-center" style="width: 18rem; margin: 1rem;">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <img src="../../../assets/img/logo_jeans.jpg" alt="LogoJeans" style="width: 40%;border-radius: 50%;">
+                    <h3 class="card-title">{{ toppingList[1] }}</h3>
+                    <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
+                    <a href="#" class="btn btn-primary">Editar Categoria</a>
                 </div>
-              </div>
+            </div>
+
         </div>
     </div>
 </div>
