--- a/src/app/category/list-category/list-category.component.html
+++ b/src/app/category/list-category/list-category.component.html
@@ -5,12 +5,26 @@
                 <h4 class="card-title">Categorias</h4>
             </div>
 
-            <div class="card text-center" style="width: 18rem; margin: 1rem;">
-                <div class="card-body">
-                    <img src="../../../assets/img/logo_jeans.jpg" alt="LogoJeans" style="width: 40%;border-radius: 50%;">
-                    <h3 class="card-title">{{ toppingList[1] }}</h3>
-                    <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
-                    <a href="#" class="btn btn-primary">Editar Categoria</a>
+            <div class="card text-center" style="display: flex;flex-direction: row;">
+                <div class="card-body"><img _ngcontent-lnd-c104="" src="../../../assets/img/logo_jeans.jpg"
+                        alt="LogoJeans" style="width: 40%; border-radius: 50%;">
+                    <h3 class="card-title">Pantalones</h3><a _ngcontent-lnd-c104="" href="#"
+                        class="btn btn-primary">Editar Categoria</a>
+                </div>
+                <div class="card-body"><img _ngcontent-lnd-c104="" src="../../../assets/img/logo_jeans.jpg"
+                        alt="LogoJeans" style="width: 40%; border-radius: 50%;">
+                    <h3 class="card-title">Pantalones</h3><a _ngcontent-lnd-c104="" href="#"
+                        class="btn btn-primary">Editar Categoria</a>
+                </div>
+                <div class="card-body"><img _ngcontent-lnd-c104="" src="../../../assets/img/logo_jeans.jpg"
+                        alt="LogoJeans" style="width: 40%; border-radius: 50%;">
+                    <h3 class="card-title">Pantalones</h3><a _ngcontent-lnd-c104="" href="#"
+                        class="btn btn-primary">Editar Categoria</a>
+                </div>
+                <div class="card-body"><img _ngcontent-lnd-c104="" src="../../../assets/img/logo_jeans.jpg"
+                        alt="LogoJeans" style="width: 40%; border-radius: 50%;">
+                    <h3 class="card-title">Pantalones</h3><a _ngcontent-lnd-c104="" href="#"
+                        class="btn btn-primary">Editar Categoria</a>
                 </div>
             </div>
 
