--- a/src/app/products/list-products/list-products.component.html
+++ b/src/app/products/list-products/list-products.component.html
@@ -6,7 +6,9 @@
             </div>
             <div class="card-body">
                 <div class="col-md-12">
-                    <button class="btn btn-dark btn-lg float-right" style="padding: 1rem;"
+                    <input class="form-control" style="display: initial;width: auto;" type="text"
+                        placeholder="Buscar producto">
+                    <button class="btn btn-primary btn-lg float-right" style="padding: 1rem;"
                         routerLink="/create-product">Agregar</button>
                     <div class="card">
                         <div class="card-body">
@@ -34,7 +36,7 @@
                                         </th>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let producto of productos">
+                                        <tr *ngFor="let producto of productos | slice:desde:hasta">
                                             <td>
                                                 {{ producto.nombre }}
                                             </td>
@@ -61,6 +63,8 @@
                                         </tr>
                                     </tbody>
                                 </table>
+                                <mat-paginator [length]="productos.length" [pageSize]="pageSize" (page)="cambiarPagina($event)">
+                                </mat-paginator>
                             </div>
                         </div>
                     </div>
