--- a/src/app/products/list-products/list-products.component.html
+++ b/src/app/products/list-products/list-products.component.html
@@ -6,8 +6,8 @@
             </div>
             <div class="card-body">
                 <div class="col-md-12">
-                    <input class="form-control" style="display: initial;width: auto;" type="text"
-                        placeholder="Buscar producto">
+                    <input (keyup)="onSearchProduct($event.target.value)" matInput class="form-control"
+                        style="display: initial;width: auto;" type="text" placeholder="Buscar producto">
                     <button class="btn btn-primary btn-lg float-right" style="padding: 1rem;"
                         routerLink="/create-product">Agregar</button>
                     <div class="card">
@@ -36,7 +36,7 @@
                                         </th>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let producto of productos | slice:desde:hasta">
+                                        <tr *ngFor="let producto of productos | slice:desde:hasta ">
                                             <td>
                                                 {{ producto.nombre }}
                                             </td>
@@ -63,7 +63,8 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <mat-paginator [length]="productos.length" [pageSize]="pageSize" (page)="cambiarPagina($event)">
+                                <mat-paginator [length]="productos.length" [pageSize]="pageSize"
+                                    (page)="cambiarPagina($event)">
                                 </mat-paginator>
                             </div>
                         </div>
