--- a/src/app/products/create-products/create-products.component.html
+++ b/src/app/products/create-products/create-products.component.html
@@ -16,20 +16,51 @@
                             <form action="" [formGroup]="createProducto" (ngSubmit)="agregarEditarProducto()">
                                 <div class="row">
                                     <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Referencia del
+                                            Producto</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Referencia"
+                                            formControlName="referencia">
+                                    </div>
+                                    <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Nombre del
                                             Producto</label>
                                         <input type="text" class="form-control form-control-lg" placeholder="Nombre"
                                             formControlName="nombre">
                                     </div>
+                                </div>
+
+
+                                <div class="row mt-2">
                                     <div class="col">
-                                        <label for="exampleFormControlInput1" class="form-label">Precio del
-                                            Producto</label>
-                                        <input type="number" class="form-control form-control-lg" placeholder="Precio"
-                                            formControlName="precio">
+                                        <label for="exampleFormControlInput1" class="form-label">Valor Entrada</label>
+                                        <input type="text" class="form-control form-control-lg"
+                                            placeholder="Valor Entrada" formControlName="valorEntrada">
+                                    </div>
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Precio USD</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Precio USD"
+                                            formControlName="precioUSD">
                                     </div>
                                 </div>
 
-                                
+
+                                <div class="row mt-2">
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Valor Salida</label>
+                                        <input type="text" class="form-control form-control-lg"
+                                            placeholder="Valor Salida" formControlName="vaorSalida">
+                                    </div>
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Proveedor</label>
+                                        <mat-form-field>
+                                            <mat-select class="select-persinalization" formControlName="Proveedor">
+                                                <mat-option *ngFor="let topping of toppingList" [value]="topping">
+                                                    {{topping}}
+                                                </mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                    </div>
+                                </div>
 
 
                                 <div class="row mt-2">
@@ -39,30 +70,50 @@
                                         <input type="text" class="form-control form-control-lg" placeholder="Talla"
                                             formControlName="talla">
                                     </div>
-                                    <div class="col">
+                                    <!-- <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Categoria</label>
                                         <mat-form-field>
                                             <mat-select class="select-persinalization" formControlName="categoria">
-                                               
-                                                <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}
+
+                                                <mat-option *ngFor="let topping of toppingList" [value]="topping">
+                                                    {{topping}}
                                                 </mat-option>
                                             </mat-select>
                                         </mat-form-field>
-                                    </div>
+                                    </div> -->
                                 </div>
+
+                                <div class="row mt-2">
+                                    <table>
+                                        <tr>
+                                            <td>
+                                                <div class="form-check"><label class="form-check-label"><input
+                                                            type="checkbox" value="" checked=""
+                                                            style="position: inherit;" class="form-check-input"><span
+                                                            class="form-check-sign"><span
+                                                                class="check"></span></span></label></div>
+                                            </td>
+                                            <td>Nueva Coleccion</td>
+                                            <td style="width: 60px;"></td>
+                                            <td>
+                                                <div class="form-check"><label class="form-check-label"><input
+                                                            type="checkbox" value="" checked=""
+                                                            style="position: inherit;" class="form-check-input"><span
+                                                            class="form-check-sign"><span
+                                                                class="check"></span></span></label></div>
+                                            </td>
+                                            <td>Nueva Coleccion</td>
+                                        </tr>
+                                    </table>
+                                </div>
+
+
                                 <div class="row mt-2">
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Subir Imagen</label>
                                         <input type="file" accept=".png, .jpg" class="form-control"
                                             (change)="cargarImagen($event)">
                                         <img [src]="urlImages" width="250px" alt="" *ngIf="urlImages">
-                                    </div>
-                                </div>
-                                <div class="row mt-2">
-                                    <div class="col">
-                                        <label for="exampleFormControlInput1" class="form-label">Descripcion</label>
-                                        <textarea class="form-control form-control-lg" rows="3"
-                                            placeholder="Descripcion" formControlName="descripcion"></textarea>
                                     </div>
                                 </div>
                                 <div class="mt-3" style="text-align: center;">
