Ultimos Cambios Fron Form

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-.select-persinalization  .mat-form-field-flex {
+.select-personalization  .mat-form-field-flex {
     background-color: #fff !important;
 }
 
