--- a/src/app/products/create-products/create-products.component.html
+++ b/src/app/products/create-products/create-products.component.html
@@ -16,14 +16,17 @@
                             <form action="" [formGroup]="createProducto" (ngSubmit)="agregarEditarProducto()">
                                 <div class="row">
                                     <div class="col">
+
                                         <label for="exampleFormControlInput1" class="form-label">Referencia del
                                             Producto</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Referencia" formControlName="referencia">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Referencia"
+                                            formControlName="referencia">
                                     </div>
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Nombre del
                                             Producto</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Nombre" formControlName="nombre">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Nombre"
+                                            formControlName="nombre">
                                     </div>
                                 </div>
 
@@ -31,11 +34,13 @@
                                 <div class="row mt-2">
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Valor Entrada</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Valor Entrada" formControlName="valorEntrada">
+                                        <input type="text" class="form-control form-control-lg"
+                                            placeholder="Valor Entrada" formControlName="valorEntrada">
                                     </div>
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Precio USD</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Precio USD" formControlName="precioUSD">
+                                        <input type="text" class="form-control form-control-lg" placeholder="Precio USD"
+                                            formControlName="precioUSD">
                                     </div>
                                 </div>
 
@@ -43,12 +48,13 @@
                                 <div class="row mt-2">
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Valor Salida</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Valor Salida" formControlName="vaorSalida">
+                                        <input type="text" class="form-control form-control-lg"
+                                            placeholder="Valor Salida" formControlName="valorSalida">
                                     </div>
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Proveedor</label>
                                         <mat-form-field>
-                                            <mat-select class="select-persinalization" formControlName="Proveedor">
+                                            <mat-select class="select-personalization" formControlName="proveedor">
                                                 <mat-option *ngFor="let topping of toppingList" [value]="topping">
                                                     {{topping}}
                                                 </mat-option>
@@ -60,21 +66,14 @@
 
                                 <div class="row mt-2">
                                     <div class="col">
-                                        <label for="exampleFormControlInput1" class="form-label">Talla del
-                                            Producto</label>
-                                        <input type="text" class="form-control form-control-lg" placeholder="Talla" formControlName="talla">
-                                    </div>
-                                    <!-- <div class="col">
-                                        <label for="exampleFormControlInput1" class="form-label">Categoria</label>
-                                        <mat-form-field>
-                                            <mat-select class="select-persinalization" formControlName="categoria">
-
-                                                <mat-option *ngFor="let topping of toppingList" [value]="topping">
-                                                    {{topping}}
-                                                </mat-option>
+                                        <mat-form-field appearance="fill">
+                                            <mat-label>Tallas</mat-label>
+                                            <mat-select [formControl]="toppings" multiple>
+                                                <mat-option *ngFor="let topping of toppingListTallas" [value]="topping">
+                                                    {{topping}}</mat-option>
                                             </mat-select>
                                         </mat-form-field>
-                                    </div> -->
+                                    </div>
                                 </div>
 
                                 <div class="row mt-2">
@@ -82,18 +81,18 @@
                                         <tr>
                                             <td>
                                                 <div class="form-check"><label class="form-check-label"><input
-                                                            type="checkbox" value="" checked=""
-                                                            style="position: inherit;" class="form-check-input"><span
-                                                            class="form-check-sign"><span
+                                                            formControlName="publicForm" type="checkbox" value=""
+                                                            checked="" style="position: inherit;"
+                                                            class="form-check-input"><span class="form-check-sign"><span
                                                                 class="check"></span></span></label></div>
                                             </td>
-                                            <td>Nueva Coleccion</td>
+                                            <td>Formulaio Publico</td>
                                             <td style="width: 60px;"></td>
                                             <td>
                                                 <div class="form-check"><label class="form-check-label"><input
-                                                            type="checkbox" value="" checked=""
-                                                            style="position: inherit;" class="form-check-input"><span
-                                                            class="form-check-sign"><span
+                                                            formControlName="coleccion" type="checkbox" value=""
+                                                            checked="" style="position: inherit;"
+                                                            class="form-check-input"><span class="form-check-sign"><span
                                                                 class="check"></span></span></label></div>
                                             </td>
                                             <td>Nueva Coleccion</td>
@@ -105,13 +104,17 @@
                                 <div class="row mt-2">
                                     <div class="col">
                                         <label for="exampleFormControlInput1" class="form-label">Subir Imagen</label>
-                                        <input type="file" accept=".png, .jpg" class="form-control" (change)="cargarImagen($event)">
+                                        <input type="file" accept=".png, .jpg" class="form-control"
+                                            (change)="cargarImagen($event)">
                                         <img [src]="urlImages" width="250px" alt="" *ngIf="urlImages">
                                     </div>
                                 </div>
                                 <div class="mt-3" style="text-align: center;">
-                                    <button type="text" class="btn btn-lg mr-3" style="padding: 1rem;background-color: #dbb22a;" routerLink="/product-list">Volver</button>
-                                    <button type="submit" class="btn btn-lg" style="padding: 1rem;background-color: #1dd56f;">{{ tituloButton }}</button>
+                                    <button type="text" class="btn btn-lg mr-3"
+                                        style="padding: 1rem;background-color: #dbb22a;"
+                                        routerLink="/product-list">Volver</button>
+                                    <button type="submit" class="btn btn-lg"
+                                        style="padding: 1rem;background-color: #1dd56f;">{{ tituloButton }}</button>
                                 </div>
                             </form>
                         </div>
