List y Filter Proveedors

--- a/src/app/products/list-products/list-products.component.html
+++ b/src/app/products/list-products/list-products.component.html
@@ -45,8 +45,7 @@
                                         </th>
                                     </thead>
                                     <tbody>
-                                        <tr
-                                            *ngFor="let producto of productos| filterProducts: filterValue  | slice:desde:hasta  ">
+                                        <tr *ngFor="let producto of productos| filterProducts: filterValue  | slice:desde:hasta  ">
                                             <td>
                                                 {{ producto.referencia }}
                                             </td>
