--- a/src/app/proveedors/list-proveedor/list-proveedor.component.html
+++ b/src/app/proveedors/list-proveedor/list-proveedor.component.html
@@ -2,19 +2,19 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header card-header-danger">
-                <h4 class="card-title">Listado de Productos</h4>
+                <h4 class="card-title">Listado de Proveedor</h4>
             </div>
             <div class="card-body">
                 <div class="col-md-12">
-                    <!-- <input [(ngModel)]="filterValue" matInput class="form-control" style="display: initial;width: auto;"
-                        type="text" placeholder="Buscar producto"> -->
+                    <input [(ngModel)]="filterValue" matInput class="form-control" style="display: initial;width: auto;"
+                        type="text" placeholder="Buscar Proveedor">
                     <button class="btn btn-primary btn-lg float-right" style="padding: 1rem;"
                         routerLink="/create-proveedor">Agregar</button>
                     <div class="card">
                         <div class="card-body">
                             <div class="table-responsive">
-                                <!-- <h4 *ngIf="productos.length == 0">No hay datos para mostrar</h4> -->
-                                <table class="table">
+                                <h4 *ngIf="proveedors.length == 0">No hay datos para mostrar</h4>
+                                <table *ngIf="proveedors.length > 0" class="table">
                                     <thead class=" text-primary">
                                         <th>
                                             Nombre Contacto
@@ -36,24 +36,21 @@
                                         </th>
                                     </thead>
                                     <tbody>
-                                        <tr>
+                                        <tr *ngFor="let proveedor of proveedors | filterProveedor: filterValue | slice:desde:hasta">
                                             <td>
-                                                1
+                                                {{ proveedor.nombreContacto }}
                                             </td>
                                             <td>
-                                                2
+                                                {{ proveedor.empresa }}
                                             </td>
                                             <td>
-                                                3
+                                                {{ proveedor.ciudad }}
                                             </td>
                                             <td>
-                                                4
+                                                {{ proveedor.email }}
                                             </td>
                                             <td>
-                                                5
-                                            </td>
-                                            <td>
-                                                6
+                                                {{ proveedor.telefono }}
                                             </td>
 
                                             <td class="text-primary">
