--- a/src/app/proveedors/list-proveedor/list-proveedor.component.html
+++ b/src/app/proveedors/list-proveedor/list-proveedor.component.html
@@ -58,7 +58,7 @@
                                                 <img [routerLink]="['/editProveedor/', proveedor.id]"
                                                     src="https://incontactostorageprod.blob.core.windows.net/subirm/16504985398181650498539818.png"
                                                     style="width: 25px;margin-right: 1rem;" alt="logo">
-                                                <img (click)="eliminarProducto(proveedor.id)"
+                                                <img (click)="eliminarProveedor(proveedor.id)"
                                                     src="https://incontactostorageprod.blob.core.windows.net/subirm/16504986570091650498657009.png"
                                                     style="width: 25px;" alt="">
                                             </td>
