--- a/src/app/clients/create-clients/create-clients.component.html
+++ b/src/app/clients/create-clients/create-clients.component.html
@@ -1,1 +1,71 @@
-<p>create-clients works!</p>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-header card-header-danger">
+                <h4 class="card-title"> titulo
+                    <!-- <div *ngIf="loading" class="spinner-border text-light" role="status">
+                        <span class="visually-hidden"></span>
+                    </div> -->
+                </h4>
+            </div>
+            <div class="card-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 offset-lg-3">
+
+                            <form action="">
+                                <div class="row">
+                                    <div class="col">
+
+                                        <label for="exampleFormControlInput1" class="form-label">
+                                            Nombre</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Nombre"
+                                            formControlName="nombre">
+                                    </div>
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Celular</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Celular"
+                                            formControlName="celular">
+                                    </div>
+                                </div>
+
+
+                                <div class="row mt-2">
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Direccion</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="Direccion"
+                                            formControlName="direccion">
+                                    </div>
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">Pais - Ciudad</label>
+                                        <input type="text" class="form-control form-control-lg"
+                                            placeholder="Pais - Ciudad" formControlName="pais">
+                                    </div>
+                                </div>
+
+
+                                <div class="row mt-2">
+                                    <div class="col">
+                                        <label for="exampleFormControlInput1" class="form-label">E-mail</label>
+                                        <input type="text" class="form-control form-control-lg" placeholder="email"
+                                            formControlName="email">
+                                    </div>
+                                </div>
+
+
+                                <div class="mt-3" style="text-align: center;">
+                                    <button type="text" class="btn btn-lg mr-3"
+                                        style="padding: 1rem;background-color: #dbb22a;"
+                                        routerLink="/create-client">Volver</button>
+                                    <button type="submit" class="btn btn-lg"
+                                        style="padding: 1rem;background-color: #1dd56f;"> tituloButton </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
