--- a/src/app/clients/list-clients/list-clients.component.html
+++ b/src/app/clients/list-clients/list-clients.component.html
@@ -6,15 +6,15 @@
             </div>
             <div class="card-body">
                 <div class="col-md-12">
-                    <!-- <input [(ngModel)]="filterValue" matInput class="form-control" style="display: initial;width: auto;"
-                        type="text" placeholder="Buscar Proveedor"> -->
+                    <input [(ngModel)]="filterValue" matInput class="form-control" style="display: initial;width: auto;"
+                        type="text" placeholder="Buscar Cliente">
                     <button class="btn btn-primary btn-lg float-right" style="padding: 1rem;"
                         routerLink="/create-client">Agregar</button>
                     <div class="card">
                         <div class="card-body">
                             <div class="table-responsive">
-                                <!-- <h4 *ngIf="proveedors.length == 0">No hay datos para mostrar</h4> -->
-                                <table class="table">
+                                <h4 *ngIf="clientes.length == 0">No hay datos para mostrar</h4>
+                                <table *ngIf="clientes.length > 0" class="table">
                                     <thead class=" text-primary">
                                         <th>
                                             Nombre
@@ -36,37 +36,37 @@
                                         </th>
                                     </thead>
                                     <tbody>
-                                        <tr>
+                                        <tr *ngFor="let cliente of clientes">
                                             <td>
-
+                                                {{ cliente.nombre }}
                                             </td>
                                             <td>
-
+                                                {{ cliente.celular }}
                                             </td>
                                             <td>
-
+                                                {{ cliente.direccion }}
                                             </td>
                                             <td>
-
+                                                {{ cliente.pais }}
                                             </td>
                                             <td>
-
+                                                {{ cliente.email }}
                                             </td>
 
                                             <td class="text-primary">
-                                                <!-- <img [routerLink]="['/editProveedor/', proveedor.id]"
+                                                <img [routerLink]="['/editClient/', cliente.id]"
                                                     src="https://incontactostorageprod.blob.core.windows.net/subirm/16504985398181650498539818.png"
                                                     style="width: 25px;margin-right: 1rem;" alt="logo">
-                                                <img (click)="eliminarProveedor(proveedor.id)"
+                                                <img (click)="eliminarCliente(cliente.id)"
                                                     src="https://incontactostorageprod.blob.core.windows.net/subirm/16504986570091650498657009.png"
-                                                    style="width: 25px;" alt=""> -->
+                                                    style="width: 25px;" alt="">
                                             </td>
                                         </tr>
                                     </tbody>
                                 </table>
-                                <!-- <mat-paginator [length]="proveedors.length" [pageSize]="pageSize"
+                                <mat-paginator [length]="clientes.length" [pageSize]="pageSize"
                                     (page)="cambiarPagina($event)">
-                                </mat-paginator> -->
+                                </mat-paginator>
                             </div>
                         </div>
                     </div>
